# lynx-textra

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gn  .habitat  .tools_shared  BUILD.gn  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DEPS  LynxTextra.podspec  NOTICE  README.md  check_style.xml  config.cmake  config.gni  json_parser.podspec
demos/darwin/macos/: CMakeLists.txt  generate.sh
demos/darwin/macos/demo/demo/: AppDelegate.h  AppDelegate.m  TTTextView.h  TTTextView.m  ViewController.h  ViewController.m  main.m
demos/darwin/macos/demo/demo.xcodeproj/: project.pbxproj
demos/darwin/macos/glfw/: BUILD.gn  CMakeLists.txt  gl_app_demo_skia.cc  gl_app_demo_skia.h  gl_app_demo_skity.cc  gl_app_demo_skity.h  glfw_demo.cc  skity_adaptor.h
demos/darwin/macos/glfw/gl_app/: gl_app.cc  gl_app.hpp
demos/darwin/macos/mtl/: BUILD.gn  CMakeLists.txt  mtl_app.h  mtl_app.mm  mtl_app_demo_skity.mm
demos/darwin/macos/sk_paragraph_demo/: test_font_mgr.cc  test_font_mgr.h
demos/darwin/macos/skia_app_demo/: BUILD.gn  CMakeLists.txt  SkiaAdaptor.h  SkiaAppDemo.cpp  SkiaAppDemo.h
demos/darwin/macos/ttreaderdemo/: BUILD.gn  CMakeLists.txt  TTReaderDemo.cc  TTReaderDemo.h  paragraph_test.cc  paragraph_test.h
examples/json_parser/: BUILD.gn  CMakeLists.txt  json_parser.cc  json_parser.h  specification.json
examples/json_parser_exe/: BUILD.gn  CMakeLists.txt  main.cc
platform/android/lynxtextra/: BUILD.gn  CMakeLists.txt  build.gradle  consumer-rules.pro
platform/android/lynxtextra/src/main/: AndroidManifest.xml
platform/harmony/lynxtextra/: BUILD.gn  CMakeLists.txt  Index.ets  build-profile.json5  hvigorfile.ts  oh-package.json5
platform/harmony/lynxtextra/src/main/: module.json5
platform/harmony/lynxtextra/src/ohosTest/: module.json5
platform/iOS/LynxTextra/: BUILD.gn  TTTextDrawerDelegate.h  TTTextRunDelegate.h  TTTextRunDelegate.m
platform/iOS/LynxTextra/Bridge/: ios_canvas.h  ios_canvas.mm  ios_layout_drawer_listener.h  ios_layout_drawer_listener.mm  ios_link_delegate.h  ios_link_delegate.mm  ios_run_delegate.h  ios_run_delegate.mm
src/: BUILD.gn  CMakeLists.txt  CMakeLists.txt.old
src/ports/: platform_helper.cc
src/ports/renderer/ark_graphics/: ag_canvas_helper.h  ag_font_manager.h  ag_typeface_helper.h
src/ports/renderer/core_graphics/: font_manager_core_text.h
src/ports/shaper/ark_graphics/: shaper_ark_graphics.cc  shaper_ark_graphics.h
src/ports/shaper/coretext/: shaper_core_text.h  shaper_core_text.mm
src/ports/shaper/java/: java_font_manager.cc  java_shaper.cc  java_shaper.h  java_shaper_result.h  java_typeface.cc  java_utils.cc  java_utils.h  tttext_jni_proxy.cc
src/ports/shaper/minikin/: CMakeLists.txt  shaper_minikin.cc  shaper_minikin.h
src/ports/shaper/minikin/font/: font_helper.cc  font_helper.h  font_manager.cc  font_manager.h  ft_minikin_font.cc  ft_minikin_font.h  sk_font_manager.cc  sk_font_manager.h  sk_minikin_font.cc  sk_minikin_font.h
src/ports/shaper/minikin/lib/: AndroidLineBreakerHelper.h  BidiUtils.cpp  BidiUtils.h  CMakeLists.txt  CmapCoverage.cpp  CmapCoverage.h  Emoji.cpp  Emoji.h  Font.h  FontCollection.cpp  FontCollection.h  FontFamily.cpp  FontFamily.h  FontUtils.cpp  GraphemeBreak.cpp  GreedyLineBreaker.cpp  GreedyLineBreaker.h  Hasher.h  Hyphenator.cpp  Hyphenator.h  HyphenatorMap.cpp  HyphenatorMap.h  Layout.cpp  Layout.h  LayoutCache.h  LayoutCore.cpp  LayoutCore.h  LayoutPieces.h  LayoutSplitter.h  LayoutUtils.h  LineBreaker.cpp  Locale.cpp  (+19 more)
src/ports/shaper/skshaper/: font.h  harfbuzz_lib.cc  harfbuzz_lib.h  harfbuzz_lib_builtin.cc  harfbuzz_lib_runtime.cc  one_line_shaper.cc  one_line_shaper.h  run.cc  run.h  shaper_skshaper.cc  shaper_skshaper.h  sk_shaper.cc  sk_shaper.h  sk_shaper_harfbuzz.cc  sk_shaper_platform.cc  sk_shaper_platform_dummy.cc
src/textlayout/: font_info.cc  fontmgr_collection.cc  layout_drawer.cc  layout_measurer.cc  layout_measurer.h  layout_position.h  layout_region.cc  paragraph_impl.cc  paragraph_impl.h  shape_cache.h  style_attributes.h  text_layout.cc  text_layout_impl.cc  text_layout_impl.h  text_line_impl.cc  text_line_impl.h  tt_shaper.cc  tt_shaper.h  tttext_context.cc
src/textlayout/icu_substitute/bidi/: bidi_wrapper.cc  bidi_wrapper.h
src/textlayout/internal/: boundary_analyst.cc  boundary_analyst.h  drawer_piece.cc  drawer_piece.h  line_range.h  run_range.h
src/textlayout/run/: base_run.cc  base_run.h  ghost_run.h  layout_metrics.h  object_run.h
src/textlayout/style/: paragraph_style.cc  style.cc  style_manager.cc  style_manager.h  tt_color.cc
src/textlayout/utils/: errors.h  float_comparison.h  hasher.h  icu_wrapper.cc  icu_wrapper_static.cc  log_util.h  lru_cache.h  mutex.h  tt_point.cc  tt_point.h  tt_range.cc  tt_range.h  tt_rangef.cc  tt_rangef.h  tt_rect.h  tt_rectf.cc  tt_rectf.h  tt_size.h  tt_string.cc  tt_string.h  tt_string_piece.cc  tt_string_piece.h  type_helper.h  u_8_string.cc  u_8_string.h  value_utils.h
test/: BUILD.gn  CMakeLists.txt  README.md  boundary_analyst_test.cc  compare_images.py  inline_block_test.cc  layout_drawer_test.cc  layout_region_test.cc  mocks.h  paragraph_image_test.cc  paragraph_style_test.cc  paragraph_test.cc  run_test.cc  shape_cache_test.cc  shape_test.cc  style_manager_test.cc  style_test.cc  test_src.cc  test_src.h  test_utils.h  text_layout_test.cc  text_test.cc  tt_shaper_test.cc  tttext_context_test.cc
test/linebreak/: BUILD.gn  line_break_compare.py  line_break_test.cc
test/linebreak/data/: wiki_c++_en.txt  wiki_c++_fa.txt  wiki_c++_zh.txt
tools/android_tools/: BUILD.gn  android_env.sh  build_with_gn.py  emu_bootup.sh  emu_setup.sh  generate_cmake_script_by_gn.py  ndk  sdk  update_local_properties.py
tools/android_tools/development/scripts/: stack.py  stack_core.py  symbol.py
tools/gn_tools/: cmake_target_template.gni  gn  gn_to_cmake.py  gn_to_cmake_script.py  gn_to_podspec.py  gn_to_podspec_script.py  podspec_target_template.gni  print_gn_sources.py
tools/gn_tools/testing/: BUILD.gn  CMakeLists.txt  gn_script_testing.sh  gn_testing.cc  gn_testing.h  gn_testing.podspec  gn_testing_action.py
(+261 files in other folders)
